@@ -26,13 +26,14 @@
 	
 	<ul>
 		<li><a href="_ajax_js.html" title="Modalbox JS passing test" onclick="Modalbox.show(this.href, {title: this.title, width: 300, afterLoad: function(){ passValue('Current document') } }); return false;">Modalbox JS passing test</a></li>
-		<li><a href="_ajax_form.html?v=2" title="Modalbox Prevent Scroll Test" onclick="Modalbox.show(this.href, {title: this.title, overlayClose: false}); return false;">Modalbox 'TAB'-key Handler &amp; Prevent Scroll Test</a></li>
+		<li><a href="_ajax_form.html?v=7" title="Modalbox Prevent Scroll Test" onclick="Modalbox.show(this.href, {title: this.title, overlayClose: false}); return false;">Modalbox 'TAB'-key Handler &amp; Prevent Scroll Test</a></li>
 		<li><a href="#" title="Modalbox without Ajax Test" onclick="Modalbox.show(Builder.build('<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>'), {title: this.title, height: 150}); return false;">Modalbox without Ajax Builder Test</a></li>
 		<li><a href="#" title="Modalbox without Ajax plain HTML test" onclick="Modalbox.show('<h1>HTML Header</h1><input type=\'button\' value=\'Resize me +100\' onclick=\'Modalbox.resize(0, 120)\' /><input type=\'button\' value=\'Resize me -100\' onclick=\'Modalbox.resize(0, -100)\' />', {title: this.title, height: 250 }); return false;">Modalbox without Ajax plain HTML test</a></li>
 		<li><a href="#" title="Modalbox without Ajax by element ID test" onclick="Modalbox.show($('testContent'), {title: this.title, height: 250 }); return false;">Modalbox without Ajax by element ID test</a></li>
 		<li><a href="#" title="Modalbox activate / deactivate test" onclick="Modalbox.show('<div style=\'padding: 10px; height:100%; background:#FFF; border: 1px solid #CCC\'><h1>Activate / Deactivate Test</h1><input type=\'button\' value=\'Deactivate\' onclick=\'Modalbox.deactivate()\' /><input type=\'button\' value=\'Activate\' onclick=\'Modalbox.activate()\' /><br /><br /></div>', {title: this.title }); return false;">Modalbox activate / deactivate test</a></li>
 		<li><a href="#" title="Modalbox wrong parameter test" onclick="Modalbox.show(123, {title: this.title }); return false;">Modalbox wrong parameter test</a></li>
 		<li><a href="_ajax_form.html" title="Modalbox without transitions" onclick="Modalbox.show(this.href, {title: this.title, transitions: false}); return false;">Modalbox without transitions</a></li>
+		<li><a href="_ajax_form.html" title="Overlay opacity parameter test" onclick="Modalbox.show(this.href, {title: this.title, overlayOpacity: 0.1}); return false;">Overlay opacity parameter test</a></li>
 	</ul>
 	
 	<br />
